se crea el flujo de codigo para que obtenga las 10 citas para un doctor en especifico mejoras de codigo para que cumpl escaneo sonarlint